[package]
name = "rs"
version = "0.0.1"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]

regex = "1.8.1"
base64 = "0.21.2"
anyhow = "1.0.72"

web-sys = "0.3.64"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

serde = { version = "1.0.177", features = ["derive"] }
serde_qs = "0.12.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

reqwest = { version = "0.11.16", features = ["json"] }
