[package]
name = "rs"
version = "0.0.1"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]

anyhow = "1.0.72"
lazy_static = "1.4.0"
futures-util = "0.3.28"

base64 = "0.21.2"
base64url = "0.1.0"
data-url = "0.3.0"
getrandom = { version = "0.2.10", features = ["js"] }
mime = "0.3.17"
mime_guess = "2.0.4"
rand = { version = "0.8.5" }
regex = "1.8.1"
reqwest = { version = "0.11.16", features = ["json", "multipart"] }

js-sys = "0.3.64"
web-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-streams = "0.3.0"
console_error_panic_hook = "0.1.7"

serde = { version = "1.0.177", features = ["derive"] }
serde_qs = "0.12.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde-wasm-bindgen = "0.5.0"
serde_with = "3.1.0"
serde_repr = "0.1.16"
